--- a/src/main/resources/templates/bm.html
+++ b/src/main/resources/templates/bm.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/html">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=1440, maximum-scale=1.0" />
@@ -277,31 +277,26 @@
           <img class="line-5-zUixHA" src="img/hw-line-5-F718C294-6F14-4159-BC46-B887DC6966A9.png" />
           <img class="line-5-sdxwGy" src="img/hw-line-5-F718C294-6F14-4159-BC46-B887DC6966A9.png" />
           <img class="line-5-kTiyrb" src="img/hw-line-5-F718C294-6F14-4159-BC46-B887DC6966A9.png" />
-          <div class="textlabel-sdxwGy sd36">기획을 현실로 만들수 있을 정도의 영향력</div>
+          <div class="textlabel-sdxwGy sd36">실무경험을 쌓기 좋은 곳</div>
           <div class="group-3-zUixHA">
             <div class="textlabel-iMKsSw sdmedium24">
-              눈부신 수상과 활동 실적으로 유명한 NALSSAM BM팀은 이미 능력이 보장된 동아리입니다. 이미 BM팀이
-              기획한 많은 활동들이 실현되었죠. 당신이 기획한 프로젝트가 교내에서 실현되는 것을 목격하세요.
+              날샘 BM팀은 기업조직도 기반의 운영으로 실제 기업의 업무 환경 속에서 활동을 진행한다.</br>
+              (주) 날샘 법인 및 사업자 등록 추친으로 동아리 내에서 실제 창업 활동을 진행한다.
             </div>
           </div>
           <div class="group-4-zUixHA">
+            <div class="textlabel-Ylg7MA sd36">동아리 경영</div>
             <div class="bm-nalssam-Ylg7MA sdmedium24">
-              BM팀은 NALSSAM 창업 활동의 주체입니다. 개인의 소중한 아이디어를 검토하고 채택된 아이디어로 창업
-              활동을 진행하죠. 2020년에는 인공지능 기술을 활용한 APP &#39;캡칭플랜츠&#39;로 모의 크라우드 펀딩,
-              온라인 쇼핑몰 개설 등을 진행했고, 2021에는 법인 설립, 개인 사업자 등록 등으로 실제 창업을 이루어
-              내겠다는 원대한 계획을 진행중입니다. 당신의 아이디어로 창업을 하고 싶다면 Nalssam BM팀은 최선의
-              선택일 것입니다.
+              Nalssam의 처음과 끝은 날샘 BM팀의 역할이다. 약 700만원의 동아리 예산을 관리하고, 이를 활용하여 각 분야들을
+              서포트한다. 동아리 내 다양한 활동들을 감독하며 최종적으로 대신고 최우수 동아리가 될 수 있도록 운영한다.
             </div>
-            <div class="textlabel-Ylg7MA sd36">아이디어의 실현 그 이상을 바라보다</div>
           </div>
           <div class="group-4-sdxwGy">
             <div class="nalssam-xtVPWN sdmedium24">
-              NALSSAM의 주요 활동들의 처음과 끝은 BM팀 담당입니다. 각종 대회 상금과 동아리 지원금으로 각 팀을
-              서포트 하며 활동 보고서, 예산서 작성 등 동아리 전반의 걸쳐서 운영에 참여하며 공동체 역량의 성장과
-              업무처리 능력을 가지게 되는 것은 Nalssam BM팀의 기본입니다. BM팀에 발을 들이는 순간부터 당신은
-              이미 인재가 된 셈이죠
+              각 분야들과 연계하여 다양한 아이디어와 혁신적인 산출물들을 이용하여 내/외부 대화, 캠페인 등 다양한 활동에 참여한다.
+              아이템이 가지는 장점과 차별성을 부각시키고, 사회에 미치는 영향력을 작성하여 아이템을 부각시키는 역할을 맡는다.
             </div>
-            <div class="first-in-last-out-xtVPWN sd36">First in, Last out</div>
+            <div class="first-in-last-out-xtVPWN sd36">내/외부 대회</div>
           </div>
         </div>
         <div class="stacked-group-C61RwL">
