--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -346,7 +346,7 @@
         </div>
         <div class="nalssam-VMr6Om thebig">당신이 지원할 NALSSAM 분야는?</div>
         <div class="group-8-C61RwL">
-          <div class="textlabel-3cZhlu sd21green">홍보 영상 시청하기</div>
+          <a href="https://youtu.be/mpZCeDyRrmI" target="_blank"><div class="textlabel-3cZhlu sd21green">홍보 영상 시청하기</div></a>
           <div class="group-7-3cZhlu">
             <img class="line-d71PT4" src="img/index-line-18B7F976-302A-40F8-A668-727A7166160A@2x.png" />
             <img class="line-6tkUdT" src="img/index-line-EE1BF39F-C97C-48CA-A625-7756D7CDAAED@2x.png" />
@@ -361,8 +361,9 @@
               <img
                 class="path-copy-xcE9OD"
                 src="img/index-path-copy-ABABCB40-7F3C-433A-B4DE-CF50C687B6AA@2x.png"
-              /></div
-          ></a>
+              />
+            </div>
+          </a>
           <img
             class="x2-copy-Lh8DxQ"
             src="img/index-ub77cuc778-2-uc544ub798-copy-26B8A138-2B2C-47E5-A9B9-6D722375FF71@2x.png"
